# trading

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PLAN.md  REFERENCES.md  SCHEMA.md
include/book/: level.h  order_book.h
include/config/: recorder_config.h
include/core/: clock.h  ids.h  price.h  replay_clock.h  side.h  size.h  steady_clock.h  system_clock.h  time.h  types.h
include/data/: delta.h  event_type.h  heartbeat.h  jsonl_reader.h  jsonl_writer.h  market_event.h  record_meta.h  resync.h  snapshot.h  trade.h
src/: core_placeholder.cpp
src/cli/: main.cpp
src/data/: jsonl_reader.cpp  jsonl_writer.cpp
tests/: jsonl_writer_sanity.cpp
